# ansible-podman

./: .gitignore  Containerfile  clean.yaml  deploy.yaml  playbook.yaml  pyproject.toml  readme.md  requirements.yml
ansible/: clean.yaml  deploy.yaml  readme.md
app/: main.py
